# upl_docs

./: .dockerignore  .env_sample  .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: docs_ci.yml
config/: celery.py  settings.py  urls.py
docs/: admin.py  apps.py  models.py  permissions.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
docs/migrations/: 0001_initial.py  0002_initial.py  0003_alter_upload_state_file.py
nginx/: Dockerfile  nginx.conf
users/: models.py  permissions.py  serializer.py  tests.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_customuser_tg_chat_id.py
